<resources>
    <!-- Shared strings -->
    <string name="app_name">ShoeStore</string>
    <string name="action_log_out">Log Out</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Please log in</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_create_account">Create an account</string>

    <!-- Welcome -->
    <string name="welcome_headline">Just shoes, without the fuss.</string>
    <string name="welcome_description">Welcome to the private beta of ShoeStore. We welcome your feedback as we work to make sure your shopping experience is fantastic.</string>
    <string name="button_how_to_shop">HOW TO SHOP</string>

    <!-- Instructions -->
    <string name="instructions_first">On the next screen you\'ll see a list of all shoes currently in stock. </string>
    <string name="instructions_second">Tap on each to view more information about that shoe. From there you can tap edit to update the shoe details.</string>
    <string name="instructions_third">While in edit mode, you can choose to Save or Cancel your edits.</string>
    <string name="instructions_first_symbol">1</string>
    <string name="instructions_second_symbol">2</string>
    <string name="instructions_third_symbol">3</string>
    <string name="how_to_shop_title">How to shop</string>
    <string name="start_button_text">Let\'s Get Started</string>
    <string name="name_label_text">Name</string>
    <string name="company_label_text">Company</string>
    <string name="size_label_text">Size</string>
    <string name="description_label_text">Description</string>
</resources>