<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="name"
            type="String" />
        <variable
            name="company"
            type="String" />
        <variable
            name="description"
            type="String" />
        <variable
            name="size"
            type="String" />
    </data>

    <!-- We use a (nested) LinearLayout here since this view has some complexity
    but can be divided into two simpler LinearLayouts - a vertically-flowing series of similar
    views followed by a single horizontally-oriented button row, which is also a Linear
    Layout. We could go an extra step and extract the bottom Linear Layout into its own
    reusable content layout, but I didn't want to get too fancy. -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp">

        <TextView
            android:id="@+id/label_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/name_text_input"
            android:text="@string/name_label_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="14dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minWidth="260dp"
                android:text="@={name}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_company_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/company_text_input"
            android:text="@string/company_label_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/company_text_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@={company}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_shoe_size_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/shoe_size_text_input"
            android:text="@string/size_label_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoe_size_text_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/size_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@={size}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_description_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/description_text_input"
            android:text="@string/description_label_text" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_text_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:text="@={description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:text="@string/save" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="100dp"
                android:text="@android:string/cancel" />
        </LinearLayout>
    </LinearLayout>

</layout>
